--- a/source/hacker-buddy-camera/hacker-buddy-camera.csproj
+++ b/source/hacker-buddy-camera/hacker-buddy-camera.csproj
@@ -12,4 +12,17 @@
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.7.0.20230115" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Text\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\Text\haarcascade_frontalface_default.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Text\lbpcascade_frontalface.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
